fix(Campuses): Center align architect name (#275)

--- a/src/components/structural/home-campuses/home-campuses.module.css
+++ b/src/components/structural/home-campuses/home-campuses.module.css
@@ -172,6 +172,7 @@
   line-height: 14px;
   padding-bottom: 19px;
   position: relative;
+  text-align: center;
   width: auto;
 
   @media (--bp-sm-only) {
